checkbox issue fixed aligned properly

--- a/src/app/styles/Contact.module.css
+++ b/src/app/styles/Contact.module.css
@@ -111,8 +111,8 @@ padding: 40px 37vh;
   flex-wrap: wrap;
   gap: 15px;
 }
-.checkbox{
-  width: 10px;
+.privacy_policy input{
+  width: 12px;
 }
 
 @media (max-width: 768px) {
